# fastapi-tutorial

./: README.md  pyproject.toml
src/fastapi_tutorial/api/: __main__.py  main.py  roll.py
src/fastapi_tutorial/api/utils/: errors.py  result.py
src/fastapi_tutorial/app/: roll.py
